# AgentLab

./: .gitignore  LICENSE  QUICK_REFERENCE.txt  QUICK_REFERENCE_LANGCHAIN.txt  README.md  conftest.py  pyproject.toml  requirements.txt
docs/: ANSWER_LANGCHAIN_BRAIN.md  INDEX.md  INTEGRATION_COMPLETE.md  LANGCHAIN_INTEGRATION_COMPLETE.md  LANGCHAIN_SUMMARY.md  MCP_DASHBOARD_INTEGRATION.md  PLAYWRIGHT_AGENTS_COMPLETE.md  PLAYWRIGHT_AGENTS_INTEGRATION.md  PLAYWRIGHT_AGENTS_QUICKSTART.md  advanced-features-guide.md  agent-dashboard-guide.md  assessment-report.md  bug-fix-report.md  completion-summary.md  components-verification.md  config-quick-reference.md  configuration-guide.md  configuration-verification.md  dashboard-orchestration-guide.md  deployment-guide.md  final-verification.md  implementation-complete.md  implementation-summary.md  langchain-playwright-agents.md  langchain-vectordb-rag.md  llm-eval-usage.md  multi-agent-orchestration-guide.md  ollama-guide.md  ollama-success.md  playwright-agents-guide.md  quick-reference-orchestration.md  refactoring-summary.md
framework/: PLAYWRIGHT_AGENTS_README.md  START_HERE.py  advanced_agents.py  agentFactory.py  agent_registry.py  agentlab.py  api_test_agent.py  examples.py  healing_agent.py  langchain_agent.py  llm_eval_agent.py  llm_model_tester.py  marketplace_deployer.py  mcp_api_agent.py  mcp_config.py  mcp_orchestrator.py  mcp_tool_protocol.py  mcp_ui_agent.py  ollama_demo.py  ollama_helper.py  orchestration_examples.py  orchestrator_agent.py  playwright_agents.py  playwright_agents_config.py  rag_agent.py  (+13 more)
(+48 files in other folders)
