[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AgenticAIAutoGen"
version = "0.1.0"
description = "Agent & MCP Dashboard for testing agents and LLM integrations."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Your Name" } ]

dependencies = [
    "streamlit>=1.37.0",
    "httpx>=0.27.0",
    "pandas>=1.5.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.50.0",
    "autogen-agentchat>=0.7.0",
    "autogen-core>=0.7.0",
    "autogen-ext>=0.7.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-ollama>=1.0.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.4.0",
    "pytest-html>=4.0.0",
    "pytest-xdist>=3.0.0",
]

[project.urls]
Homepage = "https://example.org/AgenticAIAutoGen"
Repository = "https://example.org/AgenticAIAutoGen.git"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
